working on rendering handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 <body>
 
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="#">Tech Blog</a>
+        <a class="navbar-brand" href="/">Tech Blog</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -26,18 +26,18 @@
 
             <!-- Link to home page  -->
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <!-- Link to home page  -->
 
             <!-- Link to profile -->
             <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="/profile">Profile</a>
               </li>
             <!-- Link to profile -->
 
             <!-- Log in Button -->
-              <button> Log In </button>
+              <button href="/login"> Log In </button>
             <!-- Log in Button -->
 
           </ul>
