--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,6 +45,8 @@
         </div>
       </nav>
 
+      {{{ body }}}
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
