fixed login button on homepage

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
             <!-- Link to profile -->
 
             <!-- Log in Button -->
-              <button href="/login"> Log In </button>
+              <a href="/login"><button> Log In </button></a>
             <!-- Log in Button -->
 
           </ul>
