--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,8 @@
-<h1> You are on the homepage </h1>
+
+{{#each blogposts as |blogpost| }}
+    <p>
+        {{blogpost.title}}
+      {{blogpost.content}}
+      {{blogpost.user.userName}}
+    </p>
+{{/each}}
