--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,8 +1,14 @@
 
 {{#each blogposts as |blogpost| }}
-    <p>
-        {{blogpost.title}}
-      {{blogpost.content}}
-      {{blogpost.user.userName}}
-    </p>
+
+
+<div id="card-styling" class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title">{{blogpost.title}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted"> Author: {{blogpost.user.userName}}</h6>
+    <p class="card-text">{{blogpost.content}}</p>
+    <a href="#" class="card-link">Card link</a>
+  </div>
+</div>
+
 {{/each}}
