application can deliver json when clicking on a comment

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
     <h5 class="card-title">{{blogpost.title}}</h5>
     <h6 class="card-subtitle mb-2 text-muted"> Author: {{blogpost.user.userName}}</h6>
     <p class="card-text">{{blogpost.content}}</p>
-    <a href="#" class="card-link">Card link</a>
+    <a href="/blogPost/{{blogpost.id}}" class="card-link">Card link</a>
   </div>
 </div>
 
