--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,9 +1,9 @@
 <div class="text-center">
 <h2> Title: {{title}}</h2>
   <p>{{content}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <p>Created by {{user.userName}} on {{format_date date_created}}</p>
   <p> Comments: {{comments}}</p>
    <p>
-    <button class="btn btn-primary">Fund this Project!</button>
+    <button class="btn btn-primary"> A sample button </button>
   </p>
 </div>
