--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -2,8 +2,13 @@
 <h2> Title: {{title}}</h2>
   <p>{{content}}</p>
   <p>Created by {{user.userName}} on {{format_date date_created}}</p>
-  <p> Comments: {{comments}}</p>
+<div class="comment">
+                {{#each blogpost.comments as |comment|}}
+                {{> comment}}
+                {{/each}}
+            </div>
    <p>
+     {{> sample}}
     <button class="btn btn-primary"> A sample button </button>
   </p>
 </div>
