comments are now viewable on webpage

--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,6 +1,5 @@
 
 <div>
-    <p> Comment: can you see this partial? </p>
-    <p> {{comment.content}} </p>
+    <p> Comment: {{content}} </p>
 </div>
 
