--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -3,12 +3,11 @@
   <p>{{content}}</p>
   <p>Created by {{user.userName}} on {{format_date date_created}}</p>
 <div class="comment">
-                {{#each blogpost.comments as |comment|}}
-                {{> comment}}
+                {{#each comments}}
+                {{> comment }}
                 {{/each}}
             </div>
    <p>
-     {{> sample}}
     <button class="btn btn-primary"> A sample button </button>
   </p>
 </div>
