added hide text for password

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,7 +7,7 @@
   </div>
   <div class="form-group">
     <label for="login-password">Password</label>
-    <input type="login-password" class="form-control" id="login-password" placeholder="Password">
+    <input type="password" class="form-control" id="login-password" placeholder="Password">
   </div>
   <button id="login-button" type="submit" class="btn btn-primary">Submit</button>
 </form>
@@ -27,7 +27,7 @@
 
   <div class="form-group">
     <label for="signup-password">Password</label>
-    <input type="signup-password" class="form-control" id="signup-password" placeholder="Password">
+    <input type="password" class="form-control" id="signup-password" placeholder="Password">
   </div>
   <button id="signup-button" type="submit" class="btn btn-primary">Submit</button>
 </form>
