added update and delete post buttons and edited homepage blog posts

--- a/views/partials/userblogs.handlebars
+++ b/views/partials/userblogs.handlebars
@@ -10,6 +10,7 @@
                 {{/each}}
             </div>
    <p>
-    <button class="btn btn-primary"> A sample button </button>
+    <button class="btn btn-primary"> Update Post </button>
+    <button class="btn btn-primary"> Delete Post </button>
   </p>
 </div>
