--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,10 +4,11 @@
 
 <div id="card-styling" class="card" style="width: 18rem;">
   <div class="card-body">
+    <a href="/blogPost/{{blogpost.id}}" class="card-link">
     <h5 class="card-title">{{blogpost.title}}</h5>
+    </a>
     <h6 class="card-subtitle mb-2 text-muted"> Author: {{blogpost.user.userName}}</h6>
     <p class="card-text">{{blogpost.content}}</p>
-    <a href="/blogPost/{{blogpost.id}}" class="card-link">Card link</a>
   </div>
 </div>
 
