--- a/views/partials/userblogs.handlebars
+++ b/views/partials/userblogs.handlebars
@@ -1,7 +1,7 @@
 
 
-<div class="text-center">
-<h2> Title: {{title}}</h2>
+<div class="text-center user-blogpost">
+<h2> Title: {{title}} </h2>
   <p>{{content}}</p>
   <p>Created by {{user.userName}} on {{format_date date_created}}</p>
 <div class="comment">
@@ -10,7 +10,9 @@
                 {{/each}}
             </div>
    <p>
-    <button class="btn btn-primary"> Update Post </button>
-    <button class="btn btn-primary"> Delete Post </button>
+    <button id="update-post-btn" class="btn btn-primary"> Update Post </button>
+    <button id="delete-post-btn" data-id="{{id}}" class="btn btn-danger"> Delete Post </button>
   </p>
 </div>
+
+<script src="../js/userblogs.js"></script>
