deleted update form from profile.handlebars

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -22,18 +22,6 @@
   <button id="submit-blogpost" type="submit" class="btn btn-primary"> Create </button>
 </form>
 
-{{!-- Add code to update a blogpost --}}
-<form id="update-blogpost-form" style="display: block;" class="update-blogpost-form">
-    <h2> Update A Blogpost </h2>
-  <div class="form-group">
-    <label for="update-blogpost-title"> Title </label>
-    <input type="update-blogpost-title" class="form-control" id="update-blogpost-title"  placeholder="Enter a title">
-  </div>
-  <div class="form-group">
-    <label for="update-blogpost-content"> Content </label>
-    <input type="update-blogpost-content" class="form-control" id="update-blogpost-content" placeholder="Blogpost content here...">
-  </div>
-  <button id="submit-update-blogpost" type="submit" class="btn btn-primary"> Update </button>
-</form>
 
-<script src="./js/createBlogpost.js"></script>
+
+<script src="./js/profile.js"></script>
