--- a/views/partials/userblogs.handlebars
+++ b/views/partials/userblogs.handlebars
@@ -15,4 +15,19 @@
   </p>
 </div>
 
+{{!-- Add code to update a blogpost --}}
+<form id="update-blogpost-form" style="display: none;" class="update-blogpost-form">
+    <h2> Update A Blogpost </h2>
+  <div class="form-group">
+    <label for="update-blogpost-title"> Title </label>
+    <input type="update-blogpost-title" class="form-control" id="update-blogpost-title"  placeholder="Enter a title">
+  </div>
+
+  <div class="form-group">
+    <label for="update-blogpost-content"> Content </label>
+    <input type="update-blogpost-content" class="form-control" id="update-blogpost-content" placeholder="Blogpost content here...">
+  </div>
+  <button id="submit-update-blogpost" data-id="{{id}}" type="submit" class="btn btn-primary"> Update </button>
+</form>
+
 <script src="../js/userblogs.js"></script>
