trying to troubleshoot identifier already being declared in line 1

--- a/views/partials/userblogs.handlebars
+++ b/views/partials/userblogs.handlebars
@@ -9,10 +9,10 @@
                 {{> comment }}
                 {{/each}}
             </div>
-   <p>
+   <div class="update-parent-container">
     <button id="update-post-btn" data-id="{{id}}" class="btn btn-primary"> Update Post </button>
+  </div>
     <button id="delete-post-btn" data-id="{{id}}" class="btn btn-danger"> Delete Post </button>
-  </p>
 </div>
 
 {{!-- Add code to update a blogpost --}}
