--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -7,7 +7,19 @@
                 {{> comment }}
                 {{/each}}
             </div>
-   <p>
-    <button class="btn btn-primary"> A sample button </button>
-  </p>
+   {{!-- <p>
+    <button class="btn btn-primary" id="comment-btn"> Comment </button>
+  </p> --}}
 </div>
+
+<form id="add-comment-form-{{id}}" data-id="{{id}}" style="" class="add-comment-form">
+    <h2> Add a comment </h2>
+
+  <div class="form-group">
+    <label for="comment"> Comment </label>
+    <input type="comment" class="form-control" id="comment" placeholder="Enter comment here...">
+  </div>
+  <button type="submit" class="btn btn-primary submit-comment-btn"> Comment </button>
+</form>
+
+<script src="../js/blogpost.js"></script>
