got rid of external js link at end and added delete-btn-class

--- a/views/partials/userblogs.handlebars
+++ b/views/partials/userblogs.handlebars
@@ -12,7 +12,7 @@
    <div class="update-parent-container">
     <button id="update-post-btn-{{id}}" data-id="{{id}}" class="btn btn-primary update-post-btn"> Update Post </button>
   </div>
-    <button id="delete-post-btn-{{id}}" data-id="{{id}}" class="btn btn-danger"> Delete Post </button>
+    <button id="delete-post-btn-{{id}}" data-id="{{id}}" class="btn btn-danger delete-post-btn"> Delete Post </button>
 </div>
 
 {{!-- Add code to update a blogpost --}}
@@ -29,6 +29,4 @@
   </div>
   <button type="submit" class="btn btn-primary submit-update-blogpost"> Update </button>
 </form>
-
-<script src="../js/userblogs.js"></script>
 
