--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,67 +1,82 @@
-<!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <!--  Link to external style sheet  -->
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet" />
     <title>Tech Blog</title>
-</head>
+  </head>
 
-<body>
+  <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-        <a class="navbar-brand" href="/">Tech Blog</a>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light main-flex">
+      <img
+        class="header-image"
+        src="/images/header.jpeg"
+        alt="a geometrical header"
+      />
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+      <a class="navbar-brand text-big" href="/">Tech Blog</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <!-- Link to home page  -->
-            <li class="nav-item">
-              <a class="nav-link" href="/">Home</a>
-            </li>
-            <!-- Link to home page  -->
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
 
-            <!-- Link to profile -->
-            <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-              </li>
-            <!-- Link to profile -->
+          <!-- Link to home page  -->
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <!-- Link to home page  -->
 
-            {{#if logged_in}}
-            {{!-- Log out button  --}}
+          <!-- Link to profile -->
+          <li class="nav-item">
+            <a class="nav-link" href="/profile">Profile</a>
+          </li>
+          <!-- Link to profile -->
+
+          {{#if logged_in}}
+            {{! Log out button  }}
             <a><button id="logout"> Log Out </button></a>
-            {{else}}
+          {{else}}
             <!-- Log in Button -->
-              <a href="/login"><button> Log In </button></a>
+            <a href="/login"><button> Log In </button></a>
             <!-- Log in Button -->
-            {{/if}}
+          {{/if}}
 
-          </ul>
-          
-        </div>
-      </nav>
+        </ul>
 
-      {{{ body }}}
+      </div>
 
+    </nav>
 
+    {{{body}}}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
 
-        <!-- Render script for logged in users only -->
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
-  {{/if}}
-</body>
+    <!-- Render script for logged in users only -->
+    {{#if logged_in}}
+      <script src="/js/logout.js"></script>
+    {{/if}}
+  </body>
 
 </html>
