--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,7 +1,11 @@
 <div class="text-center">
-<h2> Title: {{title}}</h2>
-  <p>{{content}}</p>
-  <p>Created by {{user.userName}} on {{format_date date_created}}</p>
+  <div class="post-main">
+    <h2> {{title}}</h2>
+    <p>{{content}}</p>
+    <p>Created by {{user.userName}} on {{format_date date_created}}</p>
+  </div>
+    <p class="comment-header"> Comments: </p>
+
 <div class="comment">
                 {{#each comments}}
                 {{> comment }}
@@ -16,7 +20,7 @@
     <h2> Add a comment </h2>
 
   <div class="form-group">
-    <label for="comment"> Comment </label>
+    <label for="comment">  </label>
     <input type="comment" class="form-control" id="comment" placeholder="Enter comment here...">
   </div>
   <button type="submit" class="btn btn-primary submit-comment-btn"> Comment </button>
