--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,5 +1,4 @@
 <div class="comment">
-  <p> {{content}} </p>
-  <p> {{date_create}} </p>
-  <p>{{user}}</p>
+  <p> {{content}} -{{user.userName}} </p>
+  <p> posted on {{format_date date_create}}  </p>
 </div>
