--- a/views/partials/userblogs.handlebars
+++ b/views/partials/userblogs.handlebars
@@ -1,7 +1,7 @@
 
 
 <div class="text-center user-blogpost">
-<h2> Title: {{title}} </h2>
+<h2> {{title}} </h2>
   <p>{{content}}</p>
   <p>Created by {{user.userName}} on {{format_date date_created}}</p>
 <div class="comment">
