--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,3 +1,4 @@
+{{#if loggedIn}}
 <div class="text-center">
   <div class="post-main">
     <h2> {{title}}</h2>
@@ -22,5 +23,12 @@
   </div>
   <button type="submit" class="btn btn-primary submit-comment-btn"> Comment </button>
 </form>
+{{else}}
+<div class="warning-div">
+  <h3 class="warning"> You must <a href="/login"> Login </a> in order to view this page! </h3>
+</div>
+{{/if}}
+
+
 
 <script src="../js/blogpost.js"></script>
