--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,10 +52,10 @@
 
           {{#if logged_in}}
             {{! Log out button  }}
-            <a><button id="logout"> Log Out </button></a>
+            <a><button class="nav-link"  id="logout"> Log Out </button></a>
           {{else}}
             <!-- Log in Button -->
-            <a href="/login"><button> Log In </button></a>
+            <a class="nav-link" href="/login"><button> Log In </button></a>
             <!-- Log in Button -->
           {{/if}}
 
