--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,4 +1,3 @@
-{{#if loggedIn}}
 <div class="text-center">
   <div class="post-main">
     <h2> {{title}}</h2>
@@ -14,6 +13,8 @@
             </div>
 </div>
 
+{{#if logged_in}}
+
 <form id="add-comment-form-{{id}}" data-id="{{id}}" style="" class="add-comment-form">
     <h2> Add a comment </h2>
 
@@ -25,7 +26,7 @@
 </form>
 {{else}}
 <div class="warning-div">
-  <h3 class="warning"> You must <a href="/login"> Login </a> in order to view this page! </h3>
+  <h3 class="warning"> You must <a href="/login"> Login </a> in order to make a comment! </h3>
 </div>
 {{/if}}
 
