--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
 
           <!-- Link to profile -->
           <li class="nav-item">
-            <a class="nav-link" href="/profile">Profile</a>
+            <a class="nav-link" href="/profile">Dashboard</a>
           </li>
           <!-- Link to profile -->
 
