--- a/views/partials/comment.handlebars
+++ b/views/partials/comment.handlebars
@@ -1,4 +1,6 @@
-<div class="comment">
-  <p> {{content}} -{{user.userName}} </p>
-  <p> posted on {{format_date date_create}}  </p>
+<div class="comment-parent">
+  <div class="comment">
+    <p> {{content}} -{{user.userName}} </p>
+    <p> posted on {{format_date date_create}} </p>
+  </div>
 </div>
