--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,82 +1,53 @@
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CDN -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!--  Link to external style sheet  -->
     <link href="/css/style.css" rel="stylesheet" />
     <title>Tech Blog</title>
+    <style>
+      /* Adjust navbar items for smaller screens */
+      @media (max-width: 576px) {
+        .navbar-nav {
+          flex-direction: column;
+        }
+        .nav-item {
+          text-align: center;
+        }
+      }
+    </style>
   </head>
 
   <body>
-
     <nav class="navbar navbar-expand-sm navbar-light bg-light main-flex">
-      <img
-        class="header-image"
-        src="/images/header.jpeg"
-        alt="a geometrical header"
-      />
-
+      <img class="header-image" src="/images/header.jpeg" alt="a geometrical header" />
       <a class="navbar-brand text-big" href="/">Tech Blog</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div>
         <ul class="navbar-nav mr-auto">
-
           <!-- Link to home page  -->
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
           <!-- Link to home page  -->
-
           <!-- Link to profile -->
           <li class="nav-item">
             <a class="nav-link" href="/profile">Dashboard</a>
           </li>
           <!-- Link to profile -->
-
           {{#if logged_in}}
             {{! Log out button  }}
-            <a><button class="nav-link"  id="logout"> Log Out </button></a>
+            <a><button class="nav-link" id="logout"> Log Out </button></a>
           {{else}}
             <!-- Log in Button -->
             <a class="nav-link" href="/login"><button> Log In </button></a>
             <!-- Log in Button -->
           {{/if}}
-
         </ul>
-
       </div>
-
     </nav>
 
     {{{body}}}
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- Render script for logged in users only -->
-    {{#if logged_in}}
-      <script src="/js/logout.js"></script>
-    {{/if}}
-  </body>
-
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integri
